Large amount of changes to sizing for tablet screens. Updated footer to sticky instead of fixed to allow overflow scroll to work properly.

--- a/src/components/Col/style.css
+++ b/src/components/Col/style.css
@@ -10,7 +10,6 @@
 
 .home {
   position: relative;
-  bottom: 300px;
   left: 200px;
   font-family: "Lobster", cursive;
   font-size: 250px;
@@ -45,22 +44,17 @@ img {
   position: relative;
   bottom: 0;
   right: 0;
-  height: 600px;
+  height: 700px;
 }
 
 .list {
   position: relative;
   list-style-type: none;
   left: 300px;
-  bottom: 250px;
   margin: 0;
   padding: 0;
-  font-size: 35px;
+  font-size: 50px;
   font-family: "Quicksand", sans-serif;
-}
-
-.listContact {
-  bottom: 350px;
 }
 
 a:hover {
@@ -85,7 +79,7 @@ figure {
   height: 200px;
   width: 650px;
   margin-bottom: 0px !important;
-  bottom: 0px;
+  bottom: 100px;
 }
 
 .project {
@@ -99,7 +93,7 @@ figure {
   font-size: 35px;
   font-family: "Quicksand", sans-serif;
   left: 250px;
-  bottom: 0px;
+  bottom: 100px;
 }
 
 .description {
@@ -120,7 +114,6 @@ figure {
 
   .home {
     position: relative;
-    bottom: 150px;
     left: 125px;
     font-family: "Lobster", cursive;
     font-size: 200px;
@@ -130,7 +123,7 @@ figure {
     position: relative;
     width: 100%;
     left: 30px;
-    bottom: 50px;
+    bottom: 25px;
     font-family: "Quicksand", sans-serif;
     font-size: 23px;
     text-align: left;
@@ -155,22 +148,18 @@ figure {
     position: relative;
     bottom: 0;
     right: 0;
-    height: 470px;
+    height: 550px;
   }
 
   .list {
     position: relative;
     list-style-type: none;
     left: 250px;
-    bottom: 150px;
+    bottom: -50px;
     margin: 0;
     padding: 0;
-    font-size: 25px;
+    font-size: 30px;
     font-family: "Quicksand", sans-serif;
-  }
-
-  .listContact {
-    bottom: 250px;
   }
 
   figure {
@@ -190,7 +179,7 @@ figure {
 
   .cap {
     position: relative;
-    font-size: 25px;
+    font-size: 30px;
     font-family: "Quicksand", sans-serif;
     left: 100px;
     bottom: 20px;
@@ -205,7 +194,7 @@ figure {
   }
 }
 
-@media only screen and (max-width: 1024px), screen and (max-height: 600px) {
+@media only screen and (max-width: 1024px) and (min-height: 600px) {
   .col-md-8 {
     width: 100% !important;
   }
@@ -285,6 +274,98 @@ figure {
   }
 }
 
+@media only screen and (max-width: 1025px) and (min-height: 1026px) {
+  .col-md-8 {
+    width: 100% !important;
+  }
+
+  .col-md-4 {
+    width: 100% !important;
+  }
+
+  .home {
+    top: 0px;
+    left: 200px;
+    font-size: 200px !important;
+    align-items: center;
+  }
+
+  .list {
+    align-items: center;
+    text-align: center;
+    font-size: 45px !important;
+    left: -175px !important;
+    top: 200px !important;
+  }
+
+  .listContact {
+    top: 150px;
+    left: -100px;
+  }
+
+  figure {
+    left: 50px !important;
+    bottom: 300px;
+    width: 400px !important;
+  }
+
+  .project {
+    left: 0px;
+    top: 0px !important;
+  }
+
+  .cap {
+    left: 50px !important;
+    bottom: 300px;
+  }
+
+  img {
+    right: 50px;
+    top: 10px !important;
+  }
+
+  .portrait {
+    height: 850px !important;
+    left: 200px;
+    align-items: center;
+  }
+
+  .skillPortrait {
+    left: 350px !important;
+  }
+
+  .contactPortrait {
+    top: 0 !important;
+  }
+
+  .about {
+    width: 100%;
+    text-align: center;
+    font-size: 25px !important;
+    top: 75px !important;
+    left: 25px;
+  }
+
+  .hedgehog {
+    left: 200px;
+    top: 75px !important;
+    object-fit: cover;
+    object-position: 0px 200px;
+    height: 850px;
+  }
+
+  .rowHome {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .rowAbout {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+}
+
 @media only screen and (max-width: 769px) {
   figure {
     bottom: 100px;
@@ -316,7 +397,7 @@ figure {
   }
 
   figure {
-    left: 45px !important;
+    left: 50px !important;
     top: 10px;
     width: 325px !important;
     margin: 0 0 1rem;
