--- a/src/components/Row/style.css
+++ b/src/components/Row/style.css
@@ -1,6 +1,4 @@
 .row {
   position: relative;
   height: 100%;
-  display: flex;
-  align-items: flex-end;
 }
