--- a/src/components/RowAbout/style.css
+++ b/src/components/RowAbout/style.css
@@ -1,6 +1,4 @@
 .rowAbout {
   position: relative;
   height: 100%;
-  display: flex;
-  align-items: flex-end;
 }
