--- a/src/components/RowHome/style.css
+++ b/src/components/RowHome/style.css
@@ -1,6 +1,4 @@
-.rowAbout {
+.rowHome {
   position: relative;
   height: 100%;
-  display: flex;
-  align-items: flex-end;
 }
