--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -1,5 +1,6 @@
 .wrapper {
   position: relative;
+  box-sizing: border-box;
   display: flex;
   align-items: flex-end;
   min-height: calc(100% - 180px);
@@ -15,6 +16,5 @@
 @media only screen and (max-width: 575px) {
   .wrapper {
     min-height: calc(100% - 140px);
-    padding-bottom: 80px;
   }
 }
